test/suites/fail-lower/L-001.expected
  × One or more errors occured.

Error: L-001

  × Undefined identifier MkUnit
   ╭─[L-001.pol:2:5]
 1 │ def Unit.bar() : Unit {
 2 │     MkUnit => Foo
   ·     ──────
 3 │ }
   ╰────
