test/suites/fail-lower/L-001.pol
def Unit.bar() : Unit {
    MkUnit => Foo
}
 